# reversi1

./: AiPlayer.cpp  AiPlayer.h  Board.cpp  Board.h  BoardCell.cpp  BoardCell.h  CMakeLists.txt  ConsoleGameLogic.cpp  ConsoleGameLogic.h  Game.cpp  Game.h  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  a.out  main.cpp  makefile
